force-app/main/default/objects/Offer__c/Offer__c.object-meta.xml
<CustomObject>
    <label>Offer</label>
    <pluralLabel>Offers</pluralLabel>
    <nameField>
        <label>Offer Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Property__c</fullName>
        <type>MasterDetail</type>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>Offers</relationshipName>
        <required>true</required>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <type>Lookup</type>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <required>true</required>
    </fields>
    <fields>
        <fullName>Offer_Amount__c</fullName>
        <type>Currency</type>
        <label>Offer Amount</label>
        <required>true</required>
    </fields>
    <fields>
        <fullName>Offer_Date__c</fullName>
        <type>Date</type>
        <label>Offer Date</label>
        <required>true</required>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <type>Picklist</type>
        <label>Status</label>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>