force-app/main/default/objects/Offer__c/fields/Offer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Offer_Amount__c</fullName>
    <label>Offer Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>