force-app/main/default/objects/Offer__c/listViews/Lead_Assignment_Queue_Offer.listView-meta.xml
<ListView>
    <fullName>Lead_Assignment_Queue_Offer</fullName>
    <filterScope>Queue</filterScope>
    <label>Lead Assignment Queue</label>
    <queue>Lead_Assignment_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>